update newsletter section

--- a/tech.html
+++ b/tech.html
@@ -288,7 +288,7 @@
       <div class="space-y-6">
         <!-- event 1 -->
         <article class="p-5 rounded-xl bg-white shadow-sm card-border flex flex-col md:flex-row gap-6 items-center" data-aos="fade-up">
-          <img src="images\semicon.webp" alt="SEMICON Korea 2025" class="w-full md:w-1/3 card-image-cover">
+          <img src="images\semicon 1.png" alt="SEMICON Korea 2025" class="w-full md:w-1/3 card-image-cover">
           <div class="flex-1">
             <h3 class="text-xl font-semibold text-[var(--brand)]">SEMICON Korea 2025 (2.19~21, 코엑스)</h3>
             <p class="text-sm text-gray-600 mt-2">국내 최초 10나노 케미컬 필터 공개 — CMP·Post-CMP 등 첨단 공정 필터 전시로 반도체 공정의 국산화 성공을 부각.</p>
@@ -308,7 +308,7 @@
 
         <!-- event 3 -->
         <article class="p-5 rounded-xl bg-white shadow-sm card-border flex flex-col md:flex-row gap-6 items-center" data-aos="fade-up" data-aos-delay="140">
-          <img src="https://via.placeholder.com/640x360?text=KSN+2025" alt="KSN 2025" class="w-full md:w-1/3 card-image-cover">
+          <img src="images\unnamed.png" alt="KSN 2025" class="w-full md:w-1/3 card-image-cover">
           <div class="flex-1">
             <h3 class="text-xl font-semibold text-[var(--brand)]">KSN 2025 대한신장학회 (6.19~22, 코엑스)</h3>
             <p class="text-sm text-gray-600 mt-2">AI 원격모니터링 이동형 혈액투석기 공개 · Synoflux® 임상결과 발표로 의료계 현장 검증 확보.</p>
@@ -318,7 +318,7 @@
 
         <!-- event 4 -->
         <article class="p-5 rounded-xl bg-white shadow-sm card-border flex flex-col md:flex-row-reverse gap-6 items-center" data-aos="fade-up" data-aos-delay="200">
-          <img src="https://via.placeholder.com/640x360?text=JSHHD+2025" alt="JSHHD 2025" class="w-full md:w-1/3 card-image-cover">
+          <img src="images\261_ext_04_0.jpg" alt="JSHHD 2025" class="w-full md:w-1/3 card-image-cover">
           <div class="flex-1">
             <h3 class="text-xl font-semibold text-[var(--brand)]">JSHHD 2025 일본 국제재택혈액투석학회 (9.6~8)</h3>
             <p class="text-sm text-gray-600 mt-2">Synoflux®의 해외 첫 국제 발표 — 해외 전문가로부터 기술력 인정, 국제적 관심 유도.</p>
