--- a/overview.html
+++ b/overview.html
@@ -219,7 +219,7 @@ font-size: 0.95rem;
   class="fixed top-0 right-0 w-3/4 max-w-sm h-full bg-white/70 backdrop-blur-lg shadow-xl z-50 transform translate-x-full transition-transform duration-500 ease-in-out">
   <div class="p-6 space-y-6 text-lg font-medium text-slate-800">
     <a href="#hero" class="block hover:text-blue-600">1) 시노펙스 2025 한눈에 보기</a>
-    <a href="https://goodlight1234.github.io/skilltomarket/" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
+    <a href="https://goodlight1234.github.io/synopex2025/tech.html" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
     <a href="#validation" class="block hover:text-blue-600">3) 임직원 인터뷰</a>
     <a href="#business" class="block hover:text-blue-600">4) 인사이트펙스</a>
     <a href="#awards" class="block hover:text-blue-600">5) 2026 계획</a>
@@ -474,7 +474,7 @@ font-size: 0.95rem;
       <h3 class="text-2xl font-semibold text-[var(--brand)]">2025 시노펙스 뉴스레터</h3>
       <p class="text-sm text-gray-600 mt-3">기술성과와 실질 사업 효과 플로우를 보려면 밑에 버튼을 클릭하세요</p>
       <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
-        <a href="https://goodlight1234.github.io/skilltomarket/" class="px-4 py-2 rounded-md bg-[var(--brand)] text-white">사업 성과 자세히</a>
+        <a href="https://goodlight1234.github.io/synopex2025/tech.html" class="px-4 py-2 rounded-md bg-[var(--brand)] text-white">사업 성과 자세히</a>
       </div>
     </section>
   </main>
