--- a/tech.html
+++ b/tech.html
@@ -89,7 +89,7 @@
 <div id="mobileMenu"
   class="fixed top-0 right-0 w-3/4 max-w-sm h-full bg-white/70 backdrop-blur-lg shadow-xl z-50 transform translate-x-full transition-transform duration-500 ease-in-out">
   <div class="p-6 space-y-6 text-lg font-medium text-slate-800">
-    <a href="https://goodlight1234.github.io/summation/" class="block hover:text-blue-600">1) 시노펙스 2025 한눈에 보기</a>
+    <a href="https://goodlight1234.github.io/synopex2025/overview.html" class="block hover:text-blue-600">1) 시노펙스 2025 한눈에 보기</a>
     <a href="#tech" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
     <a href="#validation" class="block hover:text-blue-600">3) 임직원 인터뷰</a>
     <a href="#business" class="block hover:text-blue-600">4) 인사이트펙스</a>
