--- a/tech.html
+++ b/tech.html
@@ -90,7 +90,7 @@
   class="fixed top-0 right-0 w-3/4 max-w-sm h-full bg-white/70 backdrop-blur-lg shadow-xl z-50 transform translate-x-full transition-transform duration-500 ease-in-out">
   <div class="p-6 space-y-6 text-lg font-medium text-slate-800">
     <a href="https://goodlight1234.github.io/synopex2025/overview.html" class="block hover:text-blue-600">1) 시노펙스 2025 한눈에 보기</a>
-    <a href="#tech" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
+    <a href="" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
     <a href="#validation" class="block hover:text-blue-600">3) 임직원 인터뷰</a>
     <a href="#business" class="block hover:text-blue-600">4) 인사이트펙스</a>
     <a href="#awards" class="block hover:text-blue-600">5) 2026 계획</a>
@@ -118,9 +118,9 @@
       </div>
 
       <div class="hidden md:flex items-center gap-6">
-        <a href="#tech" class="text-sm font-medium text-slate-700 hover:text-slate-900">기술성과</a>
-        <a href="#field" class="text-sm font-medium text-slate-700 hover:text-slate-900">현장검증</a>
-        <a href="#business" class="text-sm font-medium text-slate-700 hover:text-slate-900"> 사업 확장성과</a>
+        <a href="#tech" class="nav-link text-sm font-medium text-slate-700 hover:text-slate-900">기술성과</a>
+        <a href="#field" class="nav-link text-sm font-medium text-slate-700 hover:text-slate-900">현장검증</a>
+        <a href="#business" class="nav-link text-sm font-medium text-slate-700 hover:text-slate-900"> 사업 확장성과</a>
       </div>
 
       <div class="flex items-center gap-3 flex-shrink-0">
@@ -416,18 +416,36 @@
           <img src="images\semicon 1.png" alt="SEMICON Korea 2025" class="w-full md:w-1/3 card-image-cover">
           <div class="flex-1">
             <h3 class="text-xl font-semibold text-[var(--brand)]">SEMICON Korea 2025 (2.19~21, 코엑스)</h3>
-            <p class="text-sm text-gray-600 mt-2">국내 최초 10나노 케미컬 필터 공개 — CMP·Post-CMP 등 첨단 공정 필터 전시로 반도체 공정의 국산화 성공을 부각.</p>
-            <div class="mt-3 text-xs text-gray-500">핵심키워드: 국산화 · 초정밀공정 · 공급망 대응</div>
+            <div class="mt-3">
+              <p class="text-sm text-gray-600">- 국내 최초 10나노 반도체용 케미컬 필터 개발 공개</p>
+              <p class="text-sm text-gray-600">- 15나노 및 10나노 반도체용 케미컬 필터 2종</p>
+              <p class="text-sm text-gray-600">- 70나노 및 50나노 CMP필터 2종</p>
+              <p class="text-sm text-gray-600">- Post-CMP필터 1종 첫 선</p>
+            </div>
+            <div class="mt-3 flex flex-wrap gap-2">
+              <span class="pill text-xs">국산화</span>
+              <span class="pill text-xs">초정밀공정</span>
+              <span class="pill text-xs">공급망 대응</span>
+            </div>
           </div>
         </article>
 
         <!-- event 2 -->
         <article class="p-5 rounded-xl bg-white shadow-sm card-border flex flex-col md:flex-row-reverse gap-6 items-center" data-aos="fade-up" data-aos-delay="80">
-          <img src="images\Entech_2025_new.jpg" alt="WATER KOREA 2025" class="w-full md:w-1/3 card-image-cover">
+          <img src="images\Entech_2025_new.jpg" alt="ENTECH 2025" class="w-full md:w-1/3 card-image-cover">
           <div class="flex-1">
-            <h3 class="text-xl font-semibold text-[var(--brand)]">Entech / Envex / 국제 물산업 박람회</h3>
-            <p class="text-sm text-gray-600 mt-2">PVDF·PAN UF·PES 등 멤브레인 라인업 전시 — 해수담수화, 하폐수, 식음료, 바이오까지 전 산업 적용 솔루션 공개.</p>
-            <div class="mt-3 text-xs text-gray-500">핵심키워드: 수처리 통합 · 기후대응 · 스케일업</div>
+            <h3 class="text-xl font-semibold text-[var(--brand)]">ENTECH/ENVEX 2025 (6.11~13 & 8.27~29)</h3>
+            <div class="mt-3">
+              <p class="text-sm text-gray-600">- 6개국 180개 기업 참여, 대표 국제 환경에너지 전시회</p>
+              <p class="text-sm text-gray-600">- 가압식 PVDF 멤브레인 필터, 침지식 MBR 필터 2종</p>
+              <p class="text-sm text-gray-600">- CMP필터, 케미컬필터, POU필터, PES필터 등 전시</p>
+              <p class="text-sm text-gray-600">- 기체분리막(H2, O2, CO2) 신기술 공개</p>
+            </div>
+            <div class="mt-3 flex flex-wrap gap-2">
+              <span class="pill text-xs">수처리 통합</span>
+              <span class="pill text-xs">탄소중립</span>
+              <span class="pill text-xs">친환경기술</span>
+            </div>
           </div>
         </article>
 
@@ -436,8 +454,17 @@
           <img src="images\unnamed.png" alt="KSN 2025" class="w-full md:w-1/3 card-image-cover">
           <div class="flex-1">
             <h3 class="text-xl font-semibold text-[var(--brand)]">KSN 2025 대한신장학회 (6.19~22, 코엑스)</h3>
-            <p class="text-sm text-gray-600 mt-2">AI 원격모니터링 이동형 혈액투석기 공개 · Synoflux® 임상결과 발표로 의료계 현장 검증 확보.</p>
-            <div class="mt-3 text-xs text-gray-500">핵심키워드: 임상검증 · 원격모니터링 · 환자접근성</div>
+            <div class="mt-3">
+              <p class="text-sm text-gray-600">- AI 기술 적용 플랫폼 '넥스케어' 최초 공개</p>
+              <p class="text-sm text-gray-600">- 원격모니터링 이동형 혈액투석의료기기 개발 현황 발표</p>
+              <p class="text-sm text-gray-600">- CRRT, HD기기, 혈액여과기, 정수기 등 전시</p>
+              <p class="text-sm text-gray-600">- 세계여행투석네트워크(WTDM) 연계 플랫폼 시연</p>
+            </div>
+            <div class="mt-3 flex flex-wrap gap-2">
+              <span class="pill text-xs">AI 플랫폼</span>
+              <span class="pill text-xs">원격모니터링</span>
+              <span class="pill text-xs">환자접근성</span>
+            </div>
           </div>
         </article>
 
@@ -446,8 +473,16 @@
           <img src="images\261_ext_04_0.jpg" alt="JSHHD 2025" class="w-full md:w-1/3 card-image-cover">
           <div class="flex-1">
             <h3 class="text-xl font-semibold text-[var(--brand)]">JSHHD 2025 일본 국제재택혈액투석학회 (9.6~8)</h3>
-            <p class="text-sm text-gray-600 mt-2">Synoflux®의 해외 첫 국제 발표 — 해외 전문가로부터 기술력 인정, 국제적 관심 유도.</p>
-            <div class="mt-3 text-xs text-gray-500">핵심키워드: 해외발표 · 학술신뢰 · 네트워크</div>
+            <div class="mt-3">
+              <p class="text-sm text-gray-600">- 10개국 600여 명의 전문의 참가 국제 학회</p>
+              <p class="text-sm text-gray-600">- Synoflux® 혈액여과기 임상결과 첫 국제 발표</p>
+              <p class="text-sm text-gray-600">- SCI급 논문 게재 이후 첫 해외 발표</p>
+              <p class="text-sm text-gray-600">- 이동형 인공신장기 제품군 해외 첫 공개</p>
+            </div>
+            <div class="mt-3 flex flex-wrap gap-2">
+              <span class="pill text-xs">글로벌 검증</span>
+              <span class="pill text-xs">임상신뢰도</span>
+              <span class="pill text-xs">국제네트워크</span>
           </div>
         </article>
       </div>
